--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                 <div class="carousel-item ">
                   <img class="d-block w-50 img-prop img-fluid img-thumbnail" src="yogurt.png" alt="Fourth slide">
                 </div>
+                <div class="carousel-item ">
+                  <img class="d-block w-50 img-prop img-fluid img-thumbnail" src="yogurt.png" alt="Fourth slide">
+                </div>
               </div>
           
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
