--- a/index.html
+++ b/index.html
@@ -85,11 +85,9 @@
                   <img class="d-block w-50 img-prop img-fluid img-thumbnail" src="paneer.png" alt="Third slide">
                 </div>
                 <div class="carousel-item ">
-                  <img class="d-block w-50 img-prop img-fluid img-thumbnail" src="yogurt.png" alt="Fourth slide">
+                  <img class="d-block w-50 img-prop img-fluid img-thumbnail" src="Yogurt.png" alt="Fourth slide">
                 </div>
-                <div class="carousel-item ">
-                  <img class="d-block w-50 img-prop img-fluid img-thumbnail" src="yogurt.png" alt="Fourth slide">
-                </div>
+                
               </div>
           
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
